profil resmi ekleme

--- a/app/src/main/res/layout/activity_post_ekleme_a_ct.xml
+++ b/app/src/main/res/layout/activity_post_ekleme_a_ct.xml
@@ -57,6 +57,7 @@
             android:gravity="top"
             android:hint="Açıklama"
             android:background="@null"
+            android:maxLength="300"
             android:backgroundTint="@null"
             android:inputType="textMultiLine"
             android:lines="6"
