--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,11 @@
     <color name="kırmızı">#af4448</color>
     <color name="mor">#836fa9</color>
     <color name="red">#a30000</color>
+    <color name="acıksiyah">#484848</color>
+    <color name="kapalıgri">#000a12</color>
+    <color name="şeffaf">#ccb9bc</color>
+    <color name="renk">#008ba3</color>
+
 
 
 </resources>
