--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,62 +8,65 @@
 
     <!-- TODO: Update blank fragment layout -->
     <include
-        layout="@layout/loginlogo"
         android:id="@+id/logo2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="wrap_content"
+        layout="@layout/loginlogo"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-
-        android:textStyle="bold"
-        android:inputType="textEmailAddress"
-        android:layout_marginTop="30dp"
+        android:id="@+id/loginkulad"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Email"
-        android:paddingEnd="16dp"
         android:layout_marginLeft="20dp"
-        android:textSize="19sp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
-      android:drawableLeft="@drawable/ic_account"
+        android:background="@drawable/login_background"
+        android:drawableLeft="@drawable/ic_account"
         android:drawablePadding="20dp"
         android:drawableTint="@color/colorWhite"
-        android:background="@drawable/login_background"
-        android:textColor="@color/colorWhite"
+        android:hint="Email"
+        android:importantForAutofill="noExcludeDescendants"
+        android:inputType="textEmailAddress"
+        android:maxLength="25"
         android:paddingLeft="10dp"
-        android:id="@+id/loginkulad"
-        app:layout_constraintTop_toBottomOf="@id/logo2"/>
+        android:paddingEnd="16dp"
+        android:textColor="@color/colorWhite"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/logo2" />
+
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/loginSifre_layout"
         android:layout_width="match_parent"
-        app:passwordToggleEnabled="true"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        app:startIconDrawable="@drawable/ic_lock"
-        android:id="@+id/loginSifre_layout"
         android:layout_marginRight="20dp"
-        app:startIconTint="@color/colorWhite"
         app:hintEnabled="false"
         app:layout_constraintTop_toBottomOf="@id/loginkulad"
-        android:layout_height="wrap_content">
-    <EditText
-        android:paddingEnd="16dp"
-        android:layout_marginTop="9dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Şifre"
-        android:textStyle="bold"
-        android:inputType="textPassword"
-        android:textSize="19sp"
-        android:drawableTint="@color/colorWhite"
-        android:background="@drawable/login_background"
-        android:textColor="@color/colorWhite"
-        android:id="@+id/loginsifre"
-        />
+        app:passwordToggleEnabled="true"
+        app:startIconDrawable="@drawable/ic_lock"
+        app:startIconTint="@color/colorWhite">
+
+        <EditText
+            android:id="@+id/loginsifre"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="9dp"
+            android:background="@drawable/login_background"
+            android:drawableTint="@color/colorWhite"
+            android:hint="Şifre"
+            android:importantForAutofill="noExcludeDescendants"
+            android:inputType="textPassword"
+            android:maxLength="15"
+            android:paddingEnd="16dp"
+            android:textColor="@color/colorWhite"
+            android:textSize="19sp"
+            android:textStyle="bold" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -76,16 +79,17 @@
         android:background="@drawable/button_background"
         android:text="Giriş Yap"
         android:textAllCaps="false"
-        android:textStyle="bold"
         android:textColor="@color/colorWhite"
         android:textSize="21sp"
-        app:layout_constraintTop_toBottomOf="@id/loginSifre_layout"/>
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/loginSifre_layout" />
 
     <Button
         android:id="@+id/loginkayıtol"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/button_background"
         android:text="Kayıt ol"
@@ -93,9 +97,7 @@
         android:textColor="@color/colorWhite"
         android:textSize="21sp"
         android:textStyle="bold"
-        android:layout_marginTop="10dp"
-     app:layout_constraintTop_toBottomOf="@+id/logingirisyap"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/logingirisyap" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
