--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -20,7 +20,6 @@
         android:id="@+id/isim_edittext"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:maxLength="20"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/login_background"
@@ -28,6 +27,8 @@
         android:drawablePadding="10dp"
         android:drawableTint="@color/colorWhite"
         android:hint="İsim"
+        android:importantForAutofill="noExcludeDescendants"
+        android:maxLength="20"
         android:paddingLeft="10dp"
         android:paddingEnd="16dp"
         android:textColor="@color/colorWhite"
@@ -41,13 +42,14 @@
         android:id="@+id/soyisim_edittext"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:maxLength="15"
         android:layout_marginEnd="10dp"
         android:background="@drawable/login_background"
         android:drawableStart="@drawable/ic_account_box"
         android:drawablePadding="10dp"
         android:drawableTint="@color/colorWhite"
         android:hint="Soyisim"
+        android:importantForAutofill="noExcludeDescendants"
+        android:maxLength="15"
         android:paddingLeft="20dp"
         android:paddingEnd="16dp"
         android:textColor="@color/colorWhite"
@@ -69,6 +71,7 @@
         android:drawablePadding="20dp"
         android:drawableTint="@color/colorWhite"
         android:hint="Email"
+        android:importantForAutofill="noExcludeDescendants"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         android:paddingEnd="16dp"
@@ -97,7 +100,9 @@
             android:layout_height="50dp"
             android:background="@drawable/login_background"
             android:hint="Şifre"
+            android:importantForAutofill="noExcludeDescendants"
             android:inputType="textPassword"
+            android:maxLength="15"
             android:paddingEnd="16dp"
             android:textColor="@color/colorWhite"
             android:textSize="19sp"
@@ -123,7 +128,9 @@
             android:layout_height="50dp"
             android:background="@drawable/login_background"
             android:hint="Şifre Tekrar"
+            android:importantForAutofill="noExcludeDescendants"
             android:inputType="textPassword"
+            android:maxLength="15"
             android:paddingEnd="16dp"
             android:textColor="@color/colorWhite"
             android:textSize="19sp"
@@ -135,44 +142,75 @@
         android:id="@+id/registerbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/button_background"
+        android:background="@color/colorPink"
         android:text="Kayıt Ol"
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
         android:textSize="21sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/yas_view" />
+        app:layout_constraintBottom_toBottomOf="parent" />
+
     <TextView
         android:id="@+id/yas_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="11-11-2021"
         android:layout_marginTop="10dp"
+        android:text="11-11-2021"
         android:textColor="@color/colorWhite"
-        app:layout_constraintStart_toStartOf="@id/yas_button"
+        android:textSize="20sp"
+        android:visibility="gone"
+        android:background="@color/colorBlack"
         app:layout_constraintEnd_toEndOf="@id/yas_button"
-        app:layout_constraintTop_toBottomOf="@id/yas_button"/>
+        app:layout_constraintStart_toStartOf="@id/yas_button"
+        app:layout_constraintTop_toBottomOf="@id/yas_button" />
 
     <Button
-        android:textStyle="bold"
         android:id="@+id/yas_button"
         android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:textColor="@color/colorWhite"
-        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
-        android:textAllCaps="false"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/registersifretekrar_layout"
-        app:layout_constraintStart_toStartOf="@id/registerbutton"
-        app:layout_constraintEnd_toEndOf="@id/registerbutton"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/button_background"
+        android:text="Doğum Tarihiniz"
+        android:textAllCaps="false"
+        android:textColor="@color/colorWhite"
         android:textSize="21sp"
-        android:text="Doğum Tarihiniz" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/registerbutton"
+        app:layout_constraintStart_toStartOf="@id/registerbutton"
+        app:layout_constraintTop_toBottomOf="@id/registersifretekrar_layout" />
+        <RadioGroup
+            android:id="@+id/radiogroup"
+            android:layout_width="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintTop_toBottomOf="@id/yas_view"
+            app:layout_constraintStart_toStartOf="parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <com.google.android.material.radiobutton.MaterialRadioButton
+                android:id="@+id/radio_erkek"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Erkek"
+                android:textColor="@color/colorWhite"
+                android:textSize="15sp"
+                app:buttonTint="@color/colorWhite" />
+
+            <com.google.android.material.radiobutton.MaterialRadioButton
+                android:id="@+id/radio_kadın"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10sp"
+                android:text="Kadın"
+                android:textColor="@color/colorWhite"
+                android:textSize="15sp"
+                app:buttonTint="@color/colorWhite" />
+        </RadioGroup>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
