--- a/app/src/main/res/drawable/ic_tick_box.xml
+++ b/app/src/main/res/drawable/ic_tick_box.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:width="15dp"
-        android:height="15dp"
-        android:drawable="@drawable/ic_erkek"
+        android:width="50dp"
+        android:height="50dp"
+        android:drawable="@drawable/ic_tick"
 
         />
-
 </layer-list>
