--- a/app/src/main/res/layout/activity_post_ekleme_a_ct.xml
+++ b/app/src/main/res/layout/activity_post_ekleme_a_ct.xml
@@ -68,20 +68,16 @@
 
             tools:layout_editor_absoluteX="9dp" />
     </androidx.cardview.widget.CardView>
+<ImageView
+    android:layout_width="wrap_content"
+    app:layout_constraintStart_toStartOf="@id/card"
+    app:layout_constraintEnd_toEndOf="@id/card"
+    android:layout_marginTop="30dp"
+    android:layout_height="wrap_content"
+    android:src="@drawable/tickbox_2"
+    app:layout_constraintTop_toBottomOf="@id/card"
+    android:id="@+id/resim_button"/>
 
-    <Button
-        android:id="@+id/resim_button"
-        android:textColor="@color/colorWhite"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/card"
-        app:layout_constraintEnd_toEndOf="@id/card"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/button_background"
-        android:text="Gönderiyi Paylaş"
-        android:textAllCaps="false"
-        android:textSize="23sp"
-        app:layout_constraintTop_toBottomOf="@id/card" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
