--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,25 +1,28 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.animeproje.Fragment.PostFragment">
 
-  <androidx.recyclerview.widget.RecyclerView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/recy"/>
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="Paylaşılmış Gönderi Bulunamadı"
-      android:textSize="30sp"
-      android:visibility="gone"
-      android:textColor="@color/colorWhite"
-      app:layout_constraintTop_toTopOf="parent"
-      android:id="@+id/textviewww"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:gravity="center"/>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout_post"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorBlack"
+        app:tabTextColor="@android:color/background_light"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/tablayout_post"
+        />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
