--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
@@ -10,16 +11,15 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:cardCornerRadius="300dp">
+
         <ImageView
-            android:scaleType="center"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
             android:id="@+id/profilresmi"
-            android:background="@color/colorBlack"
-            />
+            android:layout_width="47dp"
+            android:layout_height="50dp"
+            android:scaleType="center" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -51,35 +51,44 @@
         android:layout_height="256dp"
         android:background="@color/colorBlack"
         android:id="@+id/postresmi"
+        android:scaleType="center"
         app:layout_constraintTop_toBottomOf="@id/card1"
         android:layout_marginTop="7dp"/>
+
     <ImageView
-        android:layout_marginLeft="9dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/kalp"
-        android:src="@drawable/ic_favorite_border_black_24dp"
-        app:layout_constraintTop_toBottomOf="@id/postresmi"
-        app:layout_constraintStart_toStartOf="@id/postresmi"
-        android:layout_marginTop="10dp"/>
-    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_qwewq"
-        app:layout_constraintTop_toTopOf="@id/kalp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_favorite_border_black_24dp"
+        android:tint="@color/colorWhite"
+        app:layout_constraintStart_toStartOf="@id/postresmi"
+        app:layout_constraintTop_toBottomOf="@id/postresmi" />
+
+    <ImageView
         android:id="@+id/comment"
-        app:layout_constraintStart_toEndOf="@id/kalp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:tint="@color/colorWhite"
+        android:layout_marginLeft="8dp"
+        android:src="@drawable/ic_qwewq"
+        app:layout_constraintStart_toEndOf="@id/kalp"
+        app:layout_constraintTop_toTopOf="@id/kalp" />
+
     <TextView
+        android:layout_marginLeft="8dp"
+        android:id="@+id/aciklama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="açıklama"
-        android:textSize="20sp"
-        android:id="@+id/aciklama"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintTop_toBottomOf="@id/kalp"
-        app:layout_constraintStart_toStartOf="@id/kalp"/>
+        android:textColor="@color/aciklama"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@id/kalp"
+        app:layout_constraintTop_toBottomOf="@id/kalp" />
+
     <ImageView
+        android:tint="@color/colorWhite"
         android:layout_width="30dp"
         android:layout_height="30dp"
         app:layout_constraintTop_toTopOf="@id/kalp"
