--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="kapalıgri">#000a12</color>
     <color name="şeffaf">#ccb9bc</color>
     <color name="renk">#008ba3</color>
+    <color name="aciklama">#cfcfcf</color>
 
 
 
