--- a/app/src/main/res/drawable/logo_splash.xml
+++ b/app/src/main/res/drawable/logo_splash.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:width="70dp"
-        android:height="70dp"
-        android:drawable="@drawable/ic_tick"
+        android:width="199dp"
+        android:height="199dp"
+        android:drawable="@drawable/ic_logo" />
 
-        />
+
 </layer-list>
