--- a/app/src/main/res/layout/fragment_hesap__goruntule_.xml
+++ b/app/src/main/res/layout/fragment_hesap__goruntule_.xml
@@ -8,20 +8,32 @@
     tools:context=".Fragment.Hesap_Goruntule_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/hesapgoruntule_settings"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start|bottom"
+        android:layout_marginTop="20dp"
+        android:visibility="gone"
+        android:background="?attr/selectableItemBackground"
+        android:src="@drawable/ic_settings"
+        android:tint="@color/colorWhite"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <androidx.cardview.widget.CardView
         android:id="@+id/card2"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="45dp"
         app:cardCornerRadius="300dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/hesapgoruntule_profile_resim"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
             android:scaleType="center" />
     </androidx.cardview.widget.CardView>
 
@@ -118,14 +130,26 @@
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/hesapgoruntule_isim" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_height="wrap_content"
+        android:text="biyografi"
+        android:textColor="@color/colorWhite"
+        android:textStyle="italic"
+        android:textSize="15sp"
+        android:id="@+id/hesapgoruntulebiyografi"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/profil_yas"
+        />
 
     <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
         android:background="@color/blue"
+        android:layout_marginTop="40dp"
         android:paddingStart="15dp"
         android:paddingEnd="30dp"
         android:text="Takip Et"
@@ -135,7 +159,7 @@
         android:id="@+id/takip_et"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hesapgoruntule_isim"
+        app:layout_constraintTop_toBottomOf="@id/hesapgoruntulebiyografi"
         app:layout_constraintWidth_percent="0.45" />
 
     <Button
@@ -143,7 +167,7 @@
         android:text="Mesaj"
         android:background="@color/colorBlack"
         android:textColor="@color/colorWhite"
-        android:id="@+id/mesaj"
+        android:id="@+id/mesajgonder"
         android:paddingStart="15dp"
         android:layout_marginLeft="8dp"
         android:paddingEnd="30dp"
@@ -154,5 +178,37 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/takip_et"
         app:layout_constraintTop_toTopOf="@+id/takip_et"/>
+    <Button
+        android:id="@+id/hesapgoruntule_duzenle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorBlack"
+        android:drawableStart="@drawable/ic_account_box"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/colorWhite"
+        android:text="Profili Düzenle"
+        android:textAllCaps="false"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/takip_et"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+
+        />
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout_goruntule"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="300dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/takip_et"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager_goruntule"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tablayout_goruntule" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
