--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -48,7 +48,7 @@
         app:layout_constraintRight_toRightOf="parent"/>
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="256dp"
+        android:layout_height="400dp"
         android:background="@color/colorBlack"
         android:id="@+id/postresmi"
         android:scaleType="center"
@@ -89,11 +89,20 @@
 
     <ImageView
         android:tint="@color/colorWhite"
+        android:id="@+id/popup"
         android:layout_width="30dp"
         android:layout_height="30dp"
         app:layout_constraintTop_toTopOf="@id/kalp"
         android:src="@drawable/ic_more"
         app:layout_constraintEnd_toEndOf="@id/tarih" />
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toTopOf="@id/popup"
+        app:layout_constraintEnd_toStartOf="@id/popup"
+        android:src="@drawable/ic_bookmark_kaydet"
+        android:tint="@color/colorWhite"
+        />
 
 
 
